[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trick17"
dynamic = ["version"]
description = "Systemd utility functions in pure python"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = [
  "systemd",
]
authors = [
  { name = "Stefano Miccoli", email = "stefano.miccoli@polimi.it" },
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/miccoli/trick17#readme"
Issues = "https://github.com/miccoli/trick17/issues"
Source = "https://github.com/miccoli/trick17"

[tool.hatch.version]
path = "src/trick17/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "mypy>=1.0.0",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]
typing = "mypy --install-types --non-interactive {args:src/trick17 tests}"

[[tool.hatch.envs.all.matrix]]
python = ["3.10", "3.11", "3.12"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "ruff>=0.1.7",
]
[tool.hatch.envs.lint.scripts]
style = [
  "ruff {args:.}",
]
fmt = [
  "ruff format {args:.}",
  "ruff --fix {args:.}",
  "style",
]

[tool.coverage.run]
source_pkgs = ["trick17", "tests"]
branch = true
parallel = true
omit = [
  "src/trick17/__about__.py",
]

[tool.coverage.paths]
trick17 = ["src/trick17", "*/trick17/src/trick17"]
tests = ["tests", "*/trick17/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
